Enable multicast for multinic endpoint
* support IGMP protocol in bpf code
* set Allmulticast on for l2 interfaces

BUG: 255686279
Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/565614
Unit-Verified: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/568724
Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/785735
